clean up margins

--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -1710,10 +1710,10 @@ the permutations are the transposition $(12)$, this equality is as follows:
 \]
 
 
-\section*{Bibliographic Notes}
-
-There are many different ways to visually present string diagrams. In
-\Cref{sec:string diagrams}, we have
-followed the style of~\cite{broadbent-karvonen-2022} very closely. We program
-our diagrams in part using the Ti\textit{k}Z code
-of~\cite{broadbent-karvonen-2022}, and code due to Zajj Daugherty.
+% \section*{Bibliographic Notes}
+%
+% There are many different ways to visually present string diagrams. In
+% \Cref{sec:string diagrams}, we have
+% followed the style of~\cite{broadbent-karvonen-2022} very closely. We program
+% our diagrams in part using the Ti\textit{k}Z code
+% of~\cite{broadbent-karvonen-2022}, and code due to Zajj Daugherty.
