--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -44,14 +44,14 @@
 More people have contributed to this document than I could possibly name. I will
 have to settle for an incomplete list.
 
-This thesis would not have gotten off the ground without my fantastic advisers:
-Angélica, who started advising this thesis while on leave, who constantly
-indulged my disparate categorical tangents, and who gives better feedback on
-drafts than any other mentor I've ever had; and Adam, who advised a cryptography
-thesis with a student who hadn't taken cryptography, who was always willing to
-chat (complain) about academic politics or messy papers, and who repeatedly
-brought me down from spates of abstract nonsense by reminding me to think about
-the cryptography.
+This thesis would not even have gotten off the ground without my fantastic
+advisers: Angélica, who started advising this thesis while on leave, who
+constantly indulged my disparate categorical tangents, and who gives better
+feedback on drafts than any other mentor I've ever had; and Adam, who advised a
+cryptography thesis with a student who hadn't taken cryptography, who was always
+willing to chat (complain) about academic politics or messy papers, and who
+repeatedly brought me down from spates of abstract nonsense by reminding me to
+think about the cryptography.
 
 I am also thankful for the time of my readers, Greg Anderson and Mark Bedau, and
 of the numerous academics who have indulged the questions of a too-ambitious
