--- a/writeup/categorical-cryptography.tex
+++ b/writeup/categorical-cryptography.tex
@@ -144,8 +144,9 @@ access to fair coin flips\footnote{
 }. However, there is again a standard notion of computable stochastic function
 of binary strings, so we can proceed much as before, defining:
 \begin{dfn}[category of computable stochastic functions]
-  The category \scat{BinCompStoch} has sets of binary strings as objects and
-  computable stochastic functions as morphisms.
+  The \emph{category of computable stochastic functions}, \scat{BinCompStoch},
+  has sets of binary strings as objects and computable stochastic functions as
+  morphisms.
 
   A stochastic function $f:X\to Y $ between binary-encoded sets is
   \emph{computable} if $\denote{f}$ is computable. The \emph{category of
@@ -297,8 +298,8 @@ a special case.
 \section{Protocols}
 \label{sec:protocols}
 
-The categorical semantics of interactive computation---in particular, of
-protocols---originates from the study of quantum cryptography, especially of
+The categorical semantics of interactive computation, and in particular of
+protocols, originates from the study of quantum cryptography, especially of
 so-called \emph{resource theories}~\cite{coecke-2016}. The idea is to start with
 some underlying SMC $\cat{C}$ of computations---fixed throughout this
 section---and to construct a category of ``protocols built from computations in
@@ -759,7 +760,7 @@ codomain---what~\cite{broadbent-karvonen-2022} call the ``basic
 morphisms''---and then construct a full SMC via a general procedure.
 
 Objects in this multicategory are pairs of objects in $\cat{C}$. Morphisms
-$[(X_1, Y_1), \ldots, (X_n, Y_n)]\to (X', Y')$ consist of a permutation $\sigma$
+\[[(X_1, Y_1), \ldots, (X_n, Y_n)]\to (X', Y')\] consist of a permutation $\sigma$
 and an n-comb
 \[
   \begin{pic}
@@ -1551,7 +1552,7 @@ differently-structured domains and codomains than n-combs, so the translation is
 not obvious.
 
 A more direct solution is to extend $\ncomb{\cat{C}}$ with objects $!(A, B)$,
-representing reusable resources of type $A\to B$, and which are used to build
+which represent reusable resources of type $A\to B$ and are used to build
 n-combs as in $\ncombb{\cat{C}}$.
 
 \begin{dfn}\label{def:ncomba}
